# PyGuitarProv2

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
guitarpro/: __init__.py  _models_definitions.py  exceptions.py  gp3.py  gp5.py  models.py
guitarpro/io/: __init__.py  base.py  gp3.py  gp4.py  gp5.py  main.py
guitarpro/models/: __init__.py
tests/: test_conversion.py
